fixed nav visibility

--- a/css/_config.scss
+++ b/css/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$portrait-image: url(../img/portrait_pixel.png);
+$portrait-image: url(../img/portrait.jpg);
 $background-opacity: 0.8;
 
 @mixin easeOut {
